--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,24 +1,29 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
-            <fieldset>
-                <legend>Login</legend>
-                {{ form.as_p }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Login</legend>
+                {{ form|crispy }}
             </fieldset>
-            <button type="submit">Login</button>
+
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Login</button>
+            </div>
         </form>
 
-        <div>
-            <small>
-                Don't have an account? <a href="#">Register</a>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Don't have an account? <a href={% url 'register' %}>Register</a>
             </small>
 
-            <small>
+            <small class="text-muted ml-2">
                 Forgot password? <a href="#">Reset password</a>
             </small> 
         </div>
+    </div>
 
 {% endblock content %}
