--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,10 +1,11 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <div class="container mt-5">
+    <div class="container">
         <div class="card p-4 shadow-sm">
             <div class="row align-items-center">
-                <div class="col-md-3 text-center">
+                <div class="col-md-3 text-center">  
                     {% if user.profile.image %}
                         <img class="rounded-circle img-fluid mb-3" src="{{ user.profile.image.url }}" alt="Profile Image" style="width: 150px; height: 150px; object-fit: cover;">
                     {% else %}
@@ -18,6 +19,16 @@
                     <p class="mb-1"><strong>Email:</strong> {{ user.email }}</p>
                 </div>
             </div>
+
+            <form method="POST" enctype="multipart/form-data" class="mt-4">
+                {% csrf_token %}
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+                <button type="submit" class="btn btn-primary">Update Profile</button>
+            </form>
+
         </div>
+
+        
     </div>
 {% endblock %}
