--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,6 +34,7 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                   <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   
                   <form action="{% url 'logout' %}" method="post">
@@ -45,7 +46,7 @@
                   <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 {% endif %}
               </div>
-            </div>
+            </div>  
           </div>
         </nav>
       </header>
