--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,7 +5,7 @@
         <Image src="{{ post.author.profile.image.url }}" class="rounded-circle article-image mr-3" alt="Post Image" style="width: 50px; height: 50px;">
         <div class="media-body">
             <div class="article-metadata">
-                <a class="mr-2" href="#">{{ post.author }}</a>
+                <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
                 <small class="text-muted">{{ post.date_posted | date:"d F, Y" }}</small>
             </div>
             <h2 class="article-title">{{post.title}} </h2>
