--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,5 +1,7 @@
 {% extends "blog/base.html" %}
+
 {% block content %}
+    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }}) </h1>
     {% for post in posts %}
         <article class="media content-section">
             <Image src="{{ post.author.profile.image.url }}" class="rounded-circle article-image mr-3" alt="Post Image" style="width: 50px; height: 50px;">
